# First-game-in-java

./: .gitignore  .project  AGENTS.md  README.md  build.gradle  save.txt
docs/: rotas-funcionalidades.md
gradle/wrapper/: gradle-wrapper.properties
python_port/: pyproject.toml
python_port/python_port/: __init__.py  entities.py  game.py  main.py  settings.py  ui.py  world.py
src/: IDEIAS
src/com/traduvertgames/entities/: Bullet.java  BulletShoot.java  DataCore.java  Enemy.java  EnergyCell.java  EngineerNPC.java  Entity.java  LifePack.java  NanoMedkit.java  OverclockModule.java  Player.java  QuestBeacon.java  QuestItem.java  QuestNPC.java  ResearcherNPC.java  ShieldOrb.java  TeleportPad.java  Weapon.java  WeaponType.java
src/com/traduvertgames/graficos/: Spritesheet.java  UI.java
src/com/traduvertgames/main/: Game.java  Menu.java  OptionsConfig.java  Sound.java
src/com/traduvertgames/quest/: BaseObjective.java  BossHuntObjective.java  CollectArtifactsObjective.java  DataRecoveryObjective.java  NullObjective.java  QuestManager.java  RPGObjective.java  RescueObjective.java  RitualObjective.java
src/com/traduvertgames/world/: AStar.java  Camera.java  DestructibleWallTile.java  FloorTile.java  Node.java  Tile.java  Vector2i.java  WallTile.java  World.java
tools/: generate_maps.py  generate_spritesheet.py
